# demcss

./: .env  .surgeignore  CNAME  Cargo.toml  LICENSE  README.md  deploy.sh  install-cron.sh  makefile  nginx.conf
src/: main.rs
templates/: demo.html
